new workspace-based SearchAgent